# heartbeat_android

./: README.md  settings.gradle
app/: build.gradle
app/src/main/cpp/heatbeat/: CMakeCache.txt  CMakeLists.txt  FaceDetect.cpp  RPPG.cpp  com_nyiit_heatbeatdetection_detector_HeartBeatDetector.cpp  com_nyiit_heatbeatdetection_detector_HeartBeatDetector.h  mtcnn.cpp  network.cpp  opencv.cpp  pBox.cpp
app/src/main/cpp/heatbeat/boost_1_7_0/lib/armeabi-v7a/cmake/Boost-1.70.0/: BoostConfig.cmake
app/src/main/cpp/heatbeat/boost_1_7_0/lib/armeabi-v7a/cmake/boost_atomic-1.70.0/: boost_atomic-config.cmake  libboost_atomic-variant-clang-mt-a32-1_70-static.cmake
app/src/main/cpp/heatbeat/boost_1_7_0/lib/armeabi-v7a/cmake/boost_chrono-1.70.0/: boost_chrono-config.cmake  libboost_chrono-variant-clang-mt-a32-1_70-static.cmake
app/src/main/cpp/heatbeat/boost_1_7_0/lib/armeabi-v7a/cmake/boost_container-1.70.0/: boost_container-config.cmake  libboost_container-variant-clang-mt-a32-1_70-static.cmake
app/src/main/cpp/heatbeat/boost_1_7_0/lib/armeabi-v7a/cmake/boost_context-1.70.0/: boost_context-config.cmake  libboost_context-variant-clang-mt-a32-1_70-static.cmake
app/src/main/cpp/heatbeat/boost_1_7_0/lib/armeabi-v7a/cmake/boost_contract-1.70.0/: boost_contract-config.cmake  libboost_contract-variant-clang-mt-a32-1_70-static.cmake
app/src/main/cpp/heatbeat/boost_1_7_0/lib/armeabi-v7a/cmake/boost_coroutine-1.70.0/: boost_coroutine-config.cmake  libboost_coroutine-variant-clang-mt-a32-1_70-static.cmake
app/src/main/cpp/heatbeat/boost_1_7_0/lib/armeabi-v7a/cmake/boost_date_time-1.70.0/: boost_date_time-config.cmake  libboost_date_time-variant-clang-mt-a32-1_70-static.cmake
app/src/main/cpp/heatbeat/boost_1_7_0/lib/armeabi-v7a/cmake/boost_exception-1.70.0/: boost_exception-config.cmake
app/src/main/cpp/heatbeat/boost_1_7_0/lib/armeabi-v7a/cmake/boost_fiber-1.70.0/: boost_fiber-config.cmake  libboost_fiber-variant-clang-mt-a32-1_70-static.cmake
app/src/main/cpp/heatbeat/boost_1_7_0/lib/armeabi-v7a/cmake/boost_fiber_numa-1.70.0/: boost_fiber_numa-config.cmake  libboost_fiber_numa-variant-clang-mt-a32-1_70-static.cmake
app/src/main/cpp/heatbeat/boost_1_7_0/lib/armeabi-v7a/cmake/boost_filesystem-1.70.0/: boost_filesystem-config.cmake  libboost_filesystem-variant-clang-mt-a32-1_70-static.cmake
app/src/main/cpp/heatbeat/boost_1_7_0/lib/armeabi-v7a/cmake/boost_graph-1.70.0/: boost_graph-config.cmake  libboost_graph-variant-clang-mt-a32-1_70-static.cmake
app/src/main/cpp/heatbeat/boost_1_7_0/lib/armeabi-v7a/cmake/boost_graph_parallel-1.70.0/: boost_graph_parallel-config.cmake  libboost_graph_parallel-variant-clang-mt-a32-1_70-static.cmake
app/src/main/cpp/heatbeat/boost_1_7_0/lib/armeabi-v7a/cmake/boost_headers-1.70.0/: boost_headers-config.cmake
app/src/main/cpp/heatbeat/boost_1_7_0/lib/armeabi-v7a/cmake/boost_iostreams-1.70.0/: boost_iostreams-config.cmake  libboost_iostreams-variant-clang-mt-a32-1_70-static.cmake
app/src/main/cpp/heatbeat/boost_1_7_0/lib/armeabi-v7a/cmake/boost_locale-1.70.0/: boost_locale-config.cmake  libboost_locale-variant-clang-mt-a32-1_70-static.cmake
app/src/main/cpp/heatbeat/boost_1_7_0/lib/armeabi-v7a/cmake/boost_log-1.70.0/: boost_log-config.cmake  libboost_log-variant-clang-mt-a32-1_70-static.cmake
app/src/main/cpp/heatbeat/boost_1_7_0/lib/armeabi-v7a/cmake/boost_log_setup-1.70.0/: boost_log_setup-config.cmake  libboost_log_setup-variant-clang-mt-a32-1_70-static.cmake
app/src/main/cpp/heatbeat/boost_1_7_0/lib/armeabi-v7a/cmake/boost_math-1.70.0/: boost_math-config.cmake
app/src/main/cpp/heatbeat/boost_1_7_0/lib/armeabi-v7a/cmake/boost_math_c99-1.70.0/: boost_math_c99-config.cmake  libboost_math_c99-variant-clang-mt-a32-1_70-static.cmake
app/src/main/cpp/heatbeat/boost_1_7_0/lib/armeabi-v7a/cmake/boost_math_c99f-1.70.0/: boost_math_c99f-config.cmake  libboost_math_c99f-variant-clang-mt-a32-1_70-static.cmake
app/src/main/cpp/heatbeat/boost_1_7_0/lib/armeabi-v7a/cmake/boost_math_c99l-1.70.0/: boost_math_c99l-config.cmake  libboost_math_c99l-variant-clang-mt-a32-1_70-static.cmake
app/src/main/cpp/heatbeat/boost_1_7_0/lib/armeabi-v7a/cmake/boost_math_tr1-1.70.0/: boost_math_tr1-config.cmake  libboost_math_tr1-variant-clang-mt-a32-1_70-static.cmake
app/src/main/cpp/heatbeat/boost_1_7_0/lib/armeabi-v7a/cmake/boost_math_tr1f-1.70.0/: boost_math_tr1f-config.cmake  libboost_math_tr1f-variant-clang-mt-a32-1_70-static.cmake
app/src/main/cpp/heatbeat/boost_1_7_0/lib/armeabi-v7a/cmake/boost_math_tr1l-1.70.0/: boost_math_tr1l-config.cmake  libboost_math_tr1l-variant-clang-mt-a32-1_70-static.cmake
app/src/main/cpp/heatbeat/boost_1_7_0/lib/armeabi-v7a/cmake/boost_mpi-1.70.0/: boost_mpi-config.cmake  libboost_mpi-variant-clang-mt-a32-1_70-static.cmake
app/src/main/cpp/heatbeat/boost_1_7_0/lib/armeabi-v7a/cmake/boost_prg_exec_monitor-1.70.0/: boost_prg_exec_monitor-config.cmake  libboost_prg_exec_monitor-variant-clang-mt-a32-1_70-static.cmake
app/src/main/cpp/heatbeat/boost_1_7_0/lib/armeabi-v7a/cmake/boost_program_options-1.70.0/: boost_program_options-config.cmake  libboost_program_options-variant-clang-mt-a32-1_70-static.cmake
app/src/main/cpp/heatbeat/boost_1_7_0/lib/armeabi-v7a/cmake/boost_random-1.70.0/: boost_random-config.cmake  libboost_random-variant-clang-mt-a32-1_70-static.cmake
app/src/main/cpp/heatbeat/boost_1_7_0/lib/armeabi-v7a/cmake/boost_regex-1.70.0/: boost_regex-config.cmake  libboost_regex-variant-clang-mt-a32-1_70-static.cmake
app/src/main/cpp/heatbeat/boost_1_7_0/lib/armeabi-v7a/cmake/boost_serialization-1.70.0/: boost_serialization-config.cmake  (+1 more)
app/src/main/cpp/heatbeat/boost_1_7_0/lib/armeabi-v7a/pkgconfig/: boost.pc
app/src/main/cpp/heatbeat/include/: RPPG.hpp
app/src/main/cpp/heatbeat/numcpp/include/pkg-config/: NumCpp.pc
app/src/main/cpp/heatbeat/openblas_0_3_8_dev/include/: openblas_config.h
app/src/main/cpp/heatbeat/openblas_0_3_8_dev/lib/armeabi-v7a/pkgconfig/: openblas.pc
app/src/main/cpp/heatbeat/opencv_3_4_7/include/opencv2/: cvconfig.h
app/src/main/cpp/heatbeat/src/: Heartbeat.cpp
(+55 files in other folders)
